Docker support warning not needed

--- a/versions/latest/modules/zh/pages/integrations/opa-gatekeeper.adoc
+++ b/versions/latest/modules/zh/pages/integrations/opa-gatekeeper.adoc
@@ -1,5 +1,7 @@
 = OPA Gatekeeper
 
+include::shared:ROOT:partial$en/deprecation-opa-gatekeeper.adoc[]
+
 为了确保一致性和合规性，每个组织都需要能够以自动化的方式在环境中定义和执行策略。https://www.openpolicyagent.org/[OPA（Open Policy Agent）] 是一个策略引擎，用于基于策略控制云原生环境。Rancher 支持在 Kubernetes 集群中启用 OPA Gatekeeper，并且还安装了一些内置的策略定义（也称为约束模板）。
 
 OPA 提供了一种高级声明性语言，可以让你将策略指定为代码，还能扩展简单的 API，从而减轻策略决策的负担。
