--- a/shared/modules/ROOT/partials/en/deprecation-opa-gatekeeper.adoc
+++ b/shared/modules/ROOT/partials/en/deprecation-opa-gatekeeper.adoc
@@ -1,5 +1,4 @@
 [CAUTION]
 ====
-OPA Gatekeeper is deprecated and will be removed in a future release. As a replacement for OPA Gatekeeper, consider switching to <a href={props.link}>Kubewarden</a>.
+OPA Gatekeeper is deprecated and will be removed in a future release. As a replacement for OPA Gatekeeper, consider switching to xref:integrations/kubewarden.adoc[].
 ====
-
