--- a/versions/latest/modules/en/pages/observability/rancher-cluster-tools.adoc
+++ b/versions/latest/modules/en/pages/observability/rancher-cluster-tools.adoc
@@ -36,7 +36,9 @@ Rancher's integration with Istio was improved in Rancher v2.5.
 
 For more information, refer to the Istio documentation xref:observability/istio/istio.adoc[here.]
 
-== OPA Gatekeeper+++<DeprecationOPAGatekeeper link="../integrations-in-rancher/kubewarden">++++++</DeprecationOPAGatekeeper>+++
+== OPA Gatekeeper
+
+include::shared:ROOT:partial$en/deprecation-opa-gatekeeper.adoc[]
 
 https://github.com/open-policy-agent/gatekeeper[OPA Gatekeeper] is an open-source project that provides integration between OPA and Kubernetes to provide policy control via admission controller webhooks. For details on how to enable Gatekeeper in Rancher, refer to the xref:integrations/opa-gatekeeper.adoc[OPA Gatekeeper section.]
 
