--- a/versions/v2.8/modules/en/pages/about-rancher/glossary.adoc
+++ b/versions/v2.8/modules/en/pages/about-rancher/glossary.adoc
@@ -2,11 +2,4 @@
 
 This page covers Rancher-specific terminology and symbols which might be unfamiliar, or which differ between Rancher versions.
 
-[,mdx-code-block]
-----
-import Glossary, {toc as GlossaryTOC} from "/shared-files/_glossary.md"
-
-<Glossary />
-
-export const toc = GlossaryTOC;
-----
+include::shared:ROOT:partial$en/glossary.adoc[]
