--- a/versions/v2.8/modules/en/pages/integrations/opa-gatekeeper.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/opa-gatekeeper.adoc
@@ -1,6 +1,6 @@
 = OPA Gatekeeper
 
-+++<DeprecationOPAGatekeeper link="kubewarden">++++++</DeprecationOPAGatekeeper>+++
+include::shared:ROOT:partial$en/deprecation-opa-gatekeeper.adoc[]
 
 To ensure consistency and compliance, every organization needs the ability to define and enforce policies in its environment in an automated way. https://www.openpolicyagent.org/[OPA (Open Policy Agent)] is a policy engine that facilitates policy-based control for cloud native environments. Rancher provides the ability to enable OPA Gatekeeper in Kubernetes clusters, and also installs a couple of built-in policy definitions, which are also called constraint templates.
 
