--- a/versions/v2.8/modules/zh/pages/about-rancher/glossary.adoc
+++ b/versions/v2.8/modules/zh/pages/about-rancher/glossary.adoc
@@ -1,1 +1,5 @@
-PLACEHOLDER: TODO COPY CONTENTS
+= Glossary
+
+This page covers Rancher-specific terminology and symbols which might be unfamiliar, or which differ between Rancher versions.
+
+include::shared:ROOT:partial$zh/glossary.adoc[]
