--- a/versions/v2.8/modules/zh/pages/observability/rancher-cluster-tools.adoc
+++ b/versions/v2.8/modules/zh/pages/observability/rancher-cluster-tools.adoc
@@ -38,6 +38,8 @@ Rancher v2.5 改进了与 Istio 的集成。
 
 == OPA Gatekeeper
 
+include::shared:ROOT:partial$en/deprecation-opa-gatekeeper.adoc[]
+
 https://github.com/open-policy-agent/gatekeeper[OPA Gatekeeper] 是一个开源项目，它对 OPA 和 Kubernetes 进行了集成，以通过许可控制器 Webhook 提供策略控制。有关如何在 Rancher 中启用 Gatekeeper 的详细信息，请参阅 xref:../integrations/opa-gatekeeper.adoc[OPA Gatekeeper]。
 
 == CIS 扫描
