latest/zh: copy en pages to avoid 404s

--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
@@ -124,15 +124,30 @@ You may need to disable your popup blocker to see the IdP login page.
 
 == Configuration Reference
 
-| Field                     | Description                                                                                                                                        |
-| ----------------- |---------------------------------------------------------------------------------------------------|
-| Client ID                 | The Client ID of your OIDC client.                                                                                                               |
-| Client Secret             | The generated Secret of your OIDC client.                                                                                                        |
-| Private Key/Certificate | A key/certificate pair to create a secure shell between Rancher and your IdP. Required if HTTPS/SSL is enabled on your OIDC server.                |
-| Endpoints                 | Choose whether to use the generated values for the Rancher URL, Issue, and Auth Endpoint fields or to provide manual overrides if incorrect. |
-| Rancher URL               | The URL for your Rancher Server.                                                                                                                   |
-| Issuer                    | The URL of your IdP.  If your provider has discovery enabled, Rancher uses the Issuer URL to fetch all of the required URLs.                   |
-| Auth Endpoint             | The URL where users are redirected to authenticate.                                                                                                |
+|===
+| Field | Description
+
+| Client ID
+| The Client ID of your OIDC client.
+
+| Client Secret
+| The generated Secret of your OIDC client.
+
+| Private Key/Certificate
+| A key/certificate pair to create a secure shell between Rancher and your IdP. Required if HTTPS/SSL is enabled on your OIDC server.
+
+| Endpoints
+| Choose whether to use the generated values for the Rancher URL, Issue, and Auth Endpoint fields or to provide manual overrides if incorrect.
+
+| Rancher URL
+| The URL for your Rancher Server.
+
+| Issuer
+| The URL of your IdP.  If your provider has discovery enabled, Rancher uses the Issuer URL to fetch all of the required URLs.
+
+| Auth Endpoint
+| The URL where users are redirected to authenticate.
+|===
 
 == Troubleshooting
 
