latest/zh fix tabs

--- a/versions/latest/modules/zh/pages/cluster-deployment/node-requirements.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/node-requirements.adoc
@@ -49,11 +49,41 @@ SUSE Linux 可能有一个防火墙，默认情况下会阻止所有端口。在
 ======
 Tab Canal::
 +
-```yaml rancher_kubernetes_engine_config: network: plugin: canal options: canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds flannel_backend_type: vxlan services: kube-controller: extra_args: flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/ ``` 
+--
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  network:
+    plugin: canal
+    options:
+      canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+      flannel_backend_type: vxlan
+
+  services:
+    kube-controller:
+      extra_args:
+        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
+----
+--
 
 Tab Calico::
 +
-```yaml rancher_kubernetes_engine_config: network: plugin: calico options: calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds flannel_backend_type: vxlan services: kube-controller: extra_args: flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/ ```
+--
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  network:
+    plugin: calico
+    options:
+      calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+      flannel_backend_type: vxlan
+
+  services:
+    kube-controller:
+      extra_args:
+        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
+----
+--
 ======
 
 还需要启用 Docker 服务，你可以使用以下命令启用 Docker 服务：
