--- a/versions/latest/modules/zh/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc
@@ -72,11 +72,26 @@ source ~/.bash_profile
 ======
 Tab 使用 gcloud init::
 +
-1. 运行 gcloud init 并按照指示操作： ``` gcloud init ``` 如果你在远程服务器上使用 SSH，使用 --console-only 标志，以防止该命令启动浏览器。 ``` gcloud init --console-only ``` 2. 按照指示，以授权 gcloud 使用你的 Google Cloud 账户，并选择你创建的新项目。 
+--
+. 运行 gcloud init 并按照指示操作：
++
+----
+gcloud init
+----
++
+如果你在远程服务器上使用 SSH，使用 --console-only 标志，以防止该命令启动浏览器。
++
+----
+gcloud init --console-only
+----
+
+. 按照指示，以授权 gcloud 使用你的 Google Cloud 账户，并选择你创建的新项目。
+--
 
 Tab 使用 gcloud config::
 +
-
+--
+--
 ======
 
 == 4. 确认 gcloud 的配置是否正确
