--- a/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -462,11 +462,46 @@ SUSE Linux 可能有一个防火墙，默认情况下会阻止所有端口。要
 ======
 Tab SLES 15 / openSUSE Leap 15::
 +
-1. SSH 进入实例。 1. 以文本模式启动 YaST： ``` sudo yast2 ``` 1. 导航到**安全和用户** > **防火墙** > **区域：公共** > **端口**。要在界面内导航，请参照[说明](https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-yast-text.html#sec-yast-cli-navigate)。 1. 要打开所需的端口，把它们输入到 **TCP 端口** 和 **UDP 端口** 字段。在这个例子中，端口 9796 和 10250 也被打开，用于监控。由此产生的字段应类似于以下内容： ```yaml TCP Ports 22, 80, 443, 2376, 2379, 2380, 6443, 9099, 9796, 10250, 10254, 30000-32767 UDP Ports 8472, 30000-32767 ``` 1. 所有必须端口都输入后，选择**接受**。 
+--
+. SSH 进入实例。
+. 以文本模式启动 YaST：
++
+----
+sudo yast2
+----
+
+. 导航到**安全和用户** > *防火墙* > *区域：公共* > *端口*。要在界面内导航，请参照https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-yast-text.html#sec-yast-cli-navigate[说明]。
+. 要打开所需的端口，把它们输入到 *TCP 端口* 和 *UDP 端口* 字段。在这个例子中，端口 9796 和 10250 也被打开，用于监控。由此产生的字段应类似于以下内容：
++
+[,yaml]
+----
+TCP Ports
+22, 80, 443, 2376, 2379, 2380, 6443, 9099, 9796, 10250, 10254, 30000-32767
+UDP Ports
+8472, 30000-32767
+----
+
+. 所有必须端口都输入后，选择**接受**。
+--
 
 Tab SLES 12 / openSUSE Leap 42::
 +
-1. SSH 进入实例。 1. 编辑 `/etc/sysconfig/SuSEfirewall2` 并打开所需的端口。在这个例子中，端口 9796 和 10250 也被打开，用于监控。 ``` FW_SERVICES_EXT_TCP="22 80 443 2376 2379 2380 6443 9099 9796 10250 10254 30000:32767" FW_SERVICES_EXT_UDP="8472 30000:32767" FW_ROUTE=yes ``` 1. 用新的端口重启防火墙： ``` SuSEfirewall2 ```
+--
+. SSH 进入实例。
+. 编辑 `/etc/sysconfig/SuSEfirewall2` 并打开所需的端口。在这个例子中，端口 9796 和 10250 也被打开，用于监控。
++
+----
+FW_SERVICES_EXT_TCP="22 80 443 2376 2379 2380 6443 9099 9796 10250 10254 30000:32767"
+FW_SERVICES_EXT_UDP="8472 30000:32767"
+FW_ROUTE=yes
+----
+
+. 用新的端口重启防火墙：
++
+----
+SuSEfirewall2
+----
+--
 ======
 
 *结果* ：该节点已打开添加到自定义集群所需的端口。
