--- a/versions/latest/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc
+++ b/versions/latest/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc
@@ -52,15 +52,76 @@ image:keycloak/keycloak-saml-client-configuration.png[]
 ======
 Tab Keycloak 5 和更早的版本::
 +
-要获取 IDP 元数据，请从 Keycloak 客户端导出 `metadata.xml` 文件。 在**安装**选项卡中，选择**SAML 元数据 IDPSSODescriptor** 格式选项并下载你的文件。 
+--
+要获取 IDP 元数据，请从 Keycloak 客户端导出 `metadata.xml` 文件。
+在**安装**选项卡中，选择**SAML 元数据 IDPSSODescriptor** 格式选项并下载你的文件。
+--
 
 Tab Keycloak 6-13::
 +
-1. 在**配置**中，单击 **Realm 设置**选项卡。 1. 点击**通用**选项卡。 1. 在**端点**字段中，单击 **SAML 2.0 身份提供者元数据**。 验证 IDP 元数据是否包含以下属性： ``` xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:ds="http://www.w3.org/2000/09/xmldsig#" ``` 某些浏览器（例如 Firefox）可能会渲染/处理文档，使得内容看起来已被修改，并且某些属性看起来可能有缺失。在这种情况下，请使用通过浏览器找到的原始响应数据。 以下是 Firefox 的示例流程，其他浏览器可能会略有不同： 1. 按下 **F12** 访问开发者控制台。 1. 点击 **Network** 选项卡。 1. 从表中，单击包含 `descriptor` 的行。 1. 在 details 窗格中，单击 **Response** 选项卡。 1. 复制原始响应数据。 获得的 XML 以 `EntitiesDescriptor` 作为根元素。然而，Rancher 希望根元素是 `EntityDescriptor` 而不是 `EntitiesDescriptor`。因此，在将这个 XML 传递给 Rancher 之前，请按照以下步骤调整： 1. 将所有不存在的属性从 `EntitiesDescriptor` 复制到 `EntityDescriptor`。 1. 删除开头的 `+++<EntitiesDescriptor>+++` 标签。 1. 删除 xml 末尾的 `+++</EntitiesDescriptor>+++`。 最后的代码会是如下： ``` +++<EntityDescriptor xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:dsig="http://www.w3.org/2000/09/xmldsig#" entityID="https://{KEYCLOAK-URL}/auth/realms/{REALM-NAME}">+++\....+++</EntityDescriptor>+++ ``` 
+--
+. 在**配置**中，单击 **Realm 设置**选项卡。
+. 点击**通用**选项卡。
+. 在**端点**字段中，单击 *SAML 2.0 身份提供者元数据*。
+
+验证 IDP 元数据是否包含以下属性：
+
+----
+xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata"
+xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion"
+xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
+----
+
+某些浏览器（例如 Firefox）可能会渲染/处理文档，使得内容看起来已被修改，并且某些属性看起来可能有缺失。在这种情况下，请使用通过浏览器找到的原始响应数据。
+
+以下是 Firefox 的示例流程，其他浏览器可能会略有不同：
+
+. 按下 *F12* 访问开发者控制台。
+. 点击 *Network* 选项卡。
+. 从表中，单击包含 `descriptor` 的行。
+. 在 details 窗格中，单击 *Response* 选项卡。
+. 复制原始响应数据。
+
+获得的 XML 以 `EntitiesDescriptor` 作为根元素。然而，Rancher 希望根元素是 `EntityDescriptor` 而不是 `EntitiesDescriptor`。因此，在将这个 XML 传递给 Rancher 之前，请按照以下步骤调整：
+
+. 将所有不存在的属性从 `EntitiesDescriptor` 复制到 `EntityDescriptor`。
+. 删除开头的 `<EntitiesDescriptor>` 标签。
+. 删除 xml 末尾的 `</EntitiesDescriptor>`。
+
+最后的代码会是如下：
+
+----
+<EntityDescriptor xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:dsig="http://www.w3.org/2000/09/xmldsig#" entityID="https://{KEYCLOAK-URL}/auth/realms/{REALM-NAME}">
+....
+</EntityDescriptor>
+----
+--
 
 Tab Keycloak 14+::
 +
-1. 在**配置**中，单击 **Realm 设置**选项卡。 1. 点击**通用**选项卡。 1. 在**端点**字段中，单击 **SAML 2.0 身份提供者元数据**。 验证 IDP 元数据是否包含以下属性： ``` xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:ds="http://www.w3.org/2000/09/xmldsig#" ``` 某些浏览器（例如 Firefox）可能会渲染/处理文档，使得内容看起来已被修改，并且某些属性看起来可能有缺失。在这种情况下，请使用通过浏览器找到的原始响应数据。 以下是 Firefox 的示例流程，其他浏览器可能会略有不同： 1. 按下 **F12** 访问开发者控制台。 1. 点击 **Network** 选项卡。 1. 从表中，单击包含 `descriptor` 的行。 1. 在 details 窗格中，单击 **Response** 选项卡。 1. 复制原始响应数据。
+--
+. 在**配置**中，单击 **Realm 设置**选项卡。
+. 点击**通用**选项卡。
+. 在**端点**字段中，单击 *SAML 2.0 身份提供者元数据*。
+
+验证 IDP 元数据是否包含以下属性：
+
+----
+xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata"
+xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion"
+xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
+----
+
+某些浏览器（例如 Firefox）可能会渲染/处理文档，使得内容看起来已被修改，并且某些属性看起来可能有缺失。在这种情况下，请使用通过浏览器找到的原始响应数据。
+
+以下是 Firefox 的示例流程，其他浏览器可能会略有不同：
+
+. 按下 *F12* 访问开发者控制台。
+. 点击 *Network* 选项卡。
+. 从表中，单击包含 `descriptor` 的行。
+. 在 details 窗格中，单击 *Response* 选项卡。
+. 复制原始响应数据。
+--
 ======
 
 == 在 Rancher 中配置 Keycloak
