--- a/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
@@ -117,12 +117,55 @@ image:neuvector-architecture.png[NeuVector 架构]
 ======
 Tab RKE1::
 +
-- 如果 PSP 设置为 true，则所有 NeuVector 组件都是可部署的。 你需要为强化集群环境进行额外的配置，如下所示： 1. 单击 **☰ > 集群管理**。 1. 选择你创建的集群，并点击 **Explore**。 1. 在左侧导航栏中，点击 **Apps**。 1. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。 - 在**编辑选项** > **其它配置**下，选中复选框来启用 **Pod 安全策略**（无需其他配置）： ![为 RKE1 强化集群启用 PSP](/img/psp-nv-rke.png) 1. 点击右下角的**安装**。 
+--
+* 如果 PSP 设置为 true，则所有 NeuVector 组件都是可部署的。
+
+你需要为强化集群环境进行额外的配置，如下所示：
+
+. 单击 *☰ > 集群管理*。
+. 选择你创建的集群，并点击 *Explore*。
+. 在左侧导航栏中，点击 *Apps*。
+. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
+
+* 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*（无需其他配置）：
++
+image::/img/psp-nv-rke.png[为 RKE1 强化集群启用 PSP]
+
+. 点击右下角的**安装**。
+--
 
 Tab RKE2::
 +
-- 如果 PSP 设置为 true，则可以部署 NeuVector 组件 Controller 和 Enforcer。 **仅适用于 NeuVector Chart 版本 100.0.0+up2.2.0：** - 对于 Manager、Scanner 和 Updater 组件，需要进行额外的配置，如下所示： ``` kubectl patch deploy neuvector-manager-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}' kubectl patch deploy neuvector-scanner-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}' kubectl patch cronjob neuvector-updater-pod -n cattle-neuvector-system --patch '{"spec":{"jobTemplate":{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}}}' ``` +
-你需要为强化集群环境进行额外的配置。 > **注意：**你必须更新 RKE2 和 K3s 强化集群中的配置，如下所示。 1. 单击 **☰ > 集群管理**。 1. 选择你创建的集群，并点击 **Explore**。 1. 在左侧导航栏中，点击 **Apps**。 1. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。 - 在**编辑选项** > **其它配置**下，选中复选框来启用 **Pod 安全策略**。请注意，对于 `Manager runAsUser ID`，`Scanner runAsUser ID` 和 `Updater runAsUser ID`，你还必须输入大于 `0` 的值： ![为 RKE2 和 K3s 强化集群启用 PSP](/img/psp-nv-rke2.png) 1. 点击右下角的**安装**。
+--
+* 如果 PSP 设置为 true，则可以部署 NeuVector 组件 Controller 和 Enforcer。
+
+*仅适用于 NeuVector Chart 版本 100.0.0+up2.2.0：*
+
+* 对于 Manager、Scanner 和 Updater 组件，需要进行额外的配置，如下所示：
+
+----
+kubectl patch deploy neuvector-manager-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
+kubectl patch deploy neuvector-scanner-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
+kubectl patch cronjob neuvector-updater-pod -n cattle-neuvector-system --patch '{"spec":{"jobTemplate":{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}}}'
+----
+
+你需要为强化集群环境进行额外的配置。
+
+____
+**注意：**你必须更新 RKE2 和 K3s 强化集群中的配置，如下所示。
+____
+
+. 单击 *☰ > 集群管理*。
+. 选择你创建的集群，并点击 *Explore*。
+. 在左侧导航栏中，点击 *Apps*。
+. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
+
+* 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*。请注意，对于 `Manager runAsUser ID`，`Scanner runAsUser ID` 和 `Updater runAsUser ID`，你还必须输入大于 `0` 的值：
++
+image::/img/psp-nv-rke2.png[为 RKE2 和 K3s 强化集群启用 PSP]
+
+. 点击右下角的**安装**。
+--
 ======
 
 == 启用 SELinux 的集群支持 - Calico 和 Canal
