--- a/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
+++ b/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
@@ -22,16 +22,15 @@ https://prometheus.io/docs/alerting/latest/configuration/#configuration-file[Ale
 
 要在 Rancher UI 中创建通知接收器：
 
-[tabs]
-======
-Tab Rancher v2.6.5+::
-+
-1. 转到要创建接收器的集群。单击 **监控 \-> 告警 \-> AlertManagerConfigs**。 1. 单击**创建**。 1. 点击**添加接收器**。 1. 输入接收器的**名称**。 1. 为接收器配置一个或多个提供程序。如需获取填写表单的帮助，请参阅下方的配置选项。 1. 单击**创建**。 
-
-Tab Rancher 版本低于 v2.6.5::
-+
-1. 转到要创建接收器的集群。单击**监控**，然后单击**接收器**。 2. 输入接收器的名称。 3. 为接收器配置一个或多个提供程序。如需获取填写表单的帮助，请参阅下方的配置选项。 4. 单击**创建**。
-======
+. Go to the cluster where you want to create receivers. Click *Monitoring \-> Alerting \-> AlertManagerConfigs*.
+. Click *Create*.
+. Enter a *Name* for the new AlertmanagerConfig.
+. Click *Create*.
+. After creating the AlertManagerConfig, click it to add a receiver.
+. Click *Add Receiver*.
+. Enter a *Name* for the receiver.
+. Configure one or more providers for the receiver. For help filling out the forms, refer to the configuration options below.
+. Click *Create*.
 
 *结果*：告警可以向接收器发送通知。
 
