--- a/versions/latest/modules/zh/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
+++ b/versions/latest/modules/zh/pages/security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc
@@ -17,11 +17,22 @@ Kubernetes v1.25 改变了集群描述和执行安全策略的方式。从这个
 ======
 Tab RKE2::
 +
-在集群中的每个节点上执行以下操作： 1. 将 [`rancher-psact.yaml`](./rancher-psact.yaml) 保存到 `/etc/rancher/rke2` 中。 1. 编辑 RKE2 配置文件： 1. 将 `profile` 字段更新为 `cis-1.23`。 1. 指定刚才添加的配置文件的路径：`pod-security-admission-config-file: /etc/rancher/rke2/rancher-psact.yaml`。 
+--
+在集群中的每个节点上执行以下操作：
+
+. 将 link:./rancher-psact.yaml[`rancher-psact.yaml`] 保存到 `/etc/rancher/rke2` 中。
+. 编辑 RKE2 配置文件：
+ .. 将 `profile` 字段更新为 `cis-1.23`。
+ .. 指定刚才添加的配置文件的路径：`pod-security-admission-config-file: /etc/rancher/rke2/rancher-psact.yaml`。
+--
 
 Tab K3s::
 +
-在集群中的每个节点上执行以下操作： 遵循 K3s [将加固集群从 v1.24.x 升级到 v1.25.x](https://docs.k3s.io/known-issues#hardened-125)的官方说明，但使用[自定义](./rancher-psact.yaml)Rancher PSA 配置模板，而不是 K3s 官方网站上提供的配置。
+--
+在集群中的每个节点上执行以下操作：
+
+遵循 K3s https://docs.k3s.io/known-issues#hardened-125[将加固集群从 v1.24.x 升级到 v1.25.x]的官方说明，但使用link:./rancher-psact.yaml[自定义]Rancher PSA 配置模板，而不是 K3s 官方网站上提供的配置。
+--
 ======
 
 执行这些步骤后，你可以通过 Rancher UI 升级集群的 Kubernetes 版本：
@@ -38,9 +49,24 @@ Tab K3s::
 ======
 Tab RKE2::
 +
-1. 在左上角，单击 **☰ > 集群管理**。 1. 在**集群**表中找到要更新的集群，点击 **⋮**。 1. 选择**编辑配置**。 1. 在**基本信息 > 安全**下的 **CIS 配置文件**下拉菜单中，选择 `cis-1.23`。 1. 在 **PSA 配置模板**下拉菜单中，选择 `rancher-restricted`。 1. 在 **Kubernetes 版本**下拉菜单中，选择要使用的版本。 1. 单击**保存**。 
+--
+. 在左上角，单击 *☰ > 集群管理*。
+. 在**集群**表中找到要更新的集群，点击 *⋮*。
+. 选择**编辑配置**。
+. 在menu:基本信息[安全]下的 **CIS 配置文件**下拉菜单中，选择 `cis-1.23`。
+. 在 **PSA 配置模板**下拉菜单中，选择 `rancher-restricted`。
+. 在 **Kubernetes 版本**下拉菜单中，选择要使用的版本。
+. 单击**保存**。
+--
 
 Tab K3s::
 +
-1. 在左上角，单击 **☰ > 集群管理**。 1. 在**集群**表中找到要更新的集群，点击 **⋮**。 1. 选择**编辑 YAML**。 1. 从 `kube-apiserver-arg.enable-admission-plugins` 中删除 `PodSecurityPolicy`。 1. 在 `spec` 字段中，添加一行：`defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted` 1. 将 `kubernetesVersion` 更新为你选择的版本（v1.25 或更高版本）。 1. 单击**保存**。
+--
+. 在左上角，单击 *☰ > 集群管理*。
+. 在**集群**表中找到要更新的集群，点击 *⋮*。
+. 选择**编辑 YAML**。
+. 从 `kube-apiserver-arg.enable-admission-plugins` 中删除 `PodSecurityPolicy`。
+. 在 `spec` 字段中，添加一行：`defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted`
+. 将 `kubernetesVersion` 更新为你选择的版本（v1.25 或更高版本）。
+--
 ======
