latest/zh - more tab fixes

--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -57,7 +57,7 @@ If you will use ARM64 hosts, the registry must support manifests. As of April 20
 
 [#_2_collect_the_cert_manager_image]
 [pass]
-<h3><a id="_2_collect_the_cert-manager_image"></a>2. Collect the cert-manager image</h3>
+<h3><a class="anchor" id="_2_collect_the_cert_manager_image" href="#_2_collect_the_cert_manager_image"></a>2. Collect the cert-manager image</h3>
 
 [NOTE]
 ====
@@ -72,9 +72,7 @@ In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS
 
 [NOTE]
 ====
-+
 Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
-+
 ====
 
 +
@@ -152,6 +150,11 @@ For Rancher servers that will provision Linux and Windows clusters, there are di
 <h2><a id="_windows_steps"></a>Windows Steps</h2>
 
 The Windows images need to be collected and pushed from a Windows server workstation.
+
+. <<windows-1,Find the required assets for your Rancher version>>
+. <<windows-2,Save the images to your Windows Server workstation>>
+. <<windows-3,Prepare the Docker daemon>>
+. <<windows-4,Populate the private registry>>
 
 [pass]
 <h3><a id="_prerequisites"></a>Prerequisites</h3>
@@ -292,9 +295,7 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 
 [NOTE]
 ====
-+
 Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
-+
 ====
 
 +
