--- a/versions/latest/modules/zh/pages/cluster-admin/backups-and-restore/backups.adoc
+++ b/versions/latest/modules/zh/pages/cluster-admin/backups-and-restore/backups.adoc
@@ -247,7 +247,7 @@ Tab RKE2/K3s::
 
 [#_创建一次性快照的工作原理]
 [pass]
-<h3><a id="#_创建一次性快照的工作原理"></a>创建一次性快照的工作原理</h3>
+<h3><a id="_创建一次性快照的工作原理"></a>创建一次性快照的工作原理</h3>
 
 在创建一次性快照时，Rancher 会传递几组计划来执行快照创建。期间将包括以下阶段：
 
