--- a/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -171,7 +171,7 @@ Tab RKE1::
 
 [#_windows_节点]
 [pass]
-<h3><a id="#_windows_节点"></a>Windows 节点</h3>
+<h3><a id="_windows_节点"></a>Windows 节点</h3>
 
 要清理 Windows 节点，请运行 `c:\\etc\\rancher` 中的脚本。此脚本删除 Kubernetes 生成的资源和执行二进制文件，还会删除防火墙规则和网络设置：
 
@@ -185,7 +185,7 @@ popd
 
 [#_docker_容器_镜像和卷]
 [pass]
-<h3><a id="#_docker_容器_镜像和卷"></a>Docker 容器、镜像和卷</h3>
+<h3><a id="_docker_容器_镜像和卷"></a>Docker 容器、镜像和卷</h3>
 
 [CAUTION]
 ====
@@ -201,7 +201,7 @@ docker volume rm $(docker volume ls -q)
 
 [#_挂载]
 [pass]
-<h3><a id="#_挂载"></a>挂载</h3>
+<h3><a id="_挂载"></a>挂载</h3>
 
 Kubernetes 组件和 secret 会留下以下挂载：
 
@@ -226,7 +226,7 @@ Tab RKE2::
 
 [#_rke2_删除_rancher_system_agent]
 [pass]
-<h3><a id="#_rke2_删除_rancher_system_agent"></a>删除 rancher-system-agent</h3>
+<h3><a id="_rke2_删除_rancher_system_agent"></a>删除 rancher-system-agent</h3>
 
 要删除 rancher-system-agent，请运行 https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] 脚本：
 
@@ -236,7 +236,7 @@ curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-un
 
 [#_删除_rke2]
 [pass]
-<h3><a id="#_删除_rke2"></a>删除 RKE2</h3>
+<h3><a id="_删除_rke2"></a>删除 RKE2</h3>
 
 要删除 RKE2，请运行节点上已存在的 `rke2-uninstall` 脚本：
 
@@ -255,7 +255,7 @@ Tab K3s::
 
 [#_k3s_删除_rancher_system_agent]
 [pass]
-<h3><a id="#_k3s_删除_rancher_system_agent"></a>删除 rancher-system-agent</h3>
+<h3><a id="_k3s_删除_rancher_system_agent"></a>删除 rancher-system-agent</h3>
 
 要删除 rancher-system-agent，请运行 https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] 脚本：
 
@@ -265,7 +265,7 @@ curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-un
 
 [#_删除_k3s]
 [pass]
-<h3><a id="#_删除_k3s"></a>删除 K3s</h3>
+<h3><a id="_删除_k3s"></a>删除 K3s</h3>
 
 要删除 K3s，请运行节点上已存在的 `k3s-uninstall` 脚本：
 
