--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/azure/azure.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/azure/azure.adoc
@@ -55,7 +55,7 @@ Tab RKE::
 
 [#_rke1_1_创建云凭证]
 [pass]
-<h3><a id="#_rke1_1_创建云凭证"></a>1. 创建云凭证</h3>
+<h3><a id="_rke1_1_创建云凭证"></a>1. 创建云凭证</h3>
 
 . 点击 *☰ > 集群管理*。
 . 单击**云凭证**。
@@ -68,7 +68,7 @@ Tab RKE::
 
 [#_2_使用云凭证创建节点模板]
 [pass]
-<h3><a id="#_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
+<h3><a id="_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
 
 为 Azure 创建link:../infra-providers.adoc#节点模板[节点模板]会允许 Rancher 在 Azure 中配置新节点。其他集群可以复用节点模板。
 
@@ -80,7 +80,7 @@ Tab RKE::
 
 [#_3_使用节点模板创建具有节点池的集群]
 [pass]
-<h3><a id="#_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
+<h3><a id="_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
 
 使用 Rancher 在 Azure 中创建 Kubernetes 集群。
 
@@ -98,6 +98,9 @@ Tab RKE2::
 +
 --
 === 1. 创建云凭证
+[#_1_创建云凭证]
+[pass]
+<h3><a id="_1_创建云凭证"></a>1. 创建云凭证</h3>
 
 如果你已经有一组可用的云凭证，请跳过此部分。
 
@@ -111,6 +114,9 @@ Tab RKE2::
 *结果*：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。
 
 === 2. 创建你的集群
+[#_2_创建你的集群]
+[pass]
+<h3><a id="_2_创建你的集群"></a>TITLE</h3>
 
 使用 Rancher 在 Azure 中创建 Kubernetes 集群。
 
