--- a/versions/latest/modules/zh/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
@@ -162,7 +162,7 @@
 
 在将<<1-创建-iam-角色并附加到实例,创建 IAM 角色并附加到实例>>中的 IAM 配置文件附加到实例时，kubelet 组件能够自动获取 ECR 凭证。使用低于 v1.15.0 的 Kubernetes 版本时，需要在集群中配置 Amazon 云提供商。从 Kubernetes 版本 v1.15.0 开始，kubelet 无需在集群中配置 Amazon 云提供商即可获取 ECR 凭证。
 
-== Using the Out-of-Tree AWS Cloud Provider
+=== Using the Out-of-Tree AWS Cloud Provider
 
 [tabs,sync-group-id=k8s-distro]
 ======
@@ -171,7 +171,7 @@ Tab RKE2::
 --
 . https://cloud-provider-aws.sigs.k8s.io/prerequisites/[Node name conventions and other prerequisites] must be followed for the cloud provider to find the instance correctly.
 . Rancher managed RKE2/K3s clusters don't support configuring `providerID`. However, the engine will set the node name correctly if the following configuration is set on the provisioning cluster object:
-
++
 [,yaml]
 ----
 spec:
@@ -179,11 +179,11 @@ spec:
     machineGlobalConfig:
       cloud-provider-name: aws
 ----
-
++
 This option will be passed to the configuration of the various Kubernetes components that run on the node, and must be overridden per component to prevent the in-tree provider from running unintentionally:
-
++
 *Override on Etcd:*
-
++
 [,yaml]
 ----
 spec:
@@ -199,9 +199,9 @@ spec:
               values:
                 - 'true'
 ----
-
++
 *Override on Control Plane:*
-
++
 [,yaml]
 ----
 spec:
@@ -222,9 +222,9 @@ spec:
               values:
                 - 'true'
 ----
-
++
 *Override on Worker:*
-
++
 [,yaml]
 ----
 spec:
@@ -243,7 +243,7 @@ spec:
 
 . Select `Amazon` if relying on the above mechanism to set the provider ID. Otherwise, select *External (out-of-tree)* cloud provider, which sets `--cloud-provider=external` for Kubernetes components.
 . Specify the `aws-cloud-controller-manager` Helm chart as an additional manifest to install:
-
++
 [,yaml]
 ----
 spec:
@@ -274,16 +274,14 @@ Tab RKE::
 +
 --
 . https://cloud-provider-aws.sigs.k8s.io/prerequisites/[Node name conventions and other prerequisites] must be followed so that the cloud provider can find the instance. Rancher provisioned clusters don't support configuring `providerID`.
-
++
 [NOTE]
 ====
-
 If you use IP-based naming, the nodes must be named after the instance followed by the regional domain name (`ip-xxx-xxx-xxx-xxx.ec2.<region>.internal`). If you have a custom domain name set in the DHCP options, you must set `--hostname-override` on `kube-proxy` and `kubelet` to match this naming convention.
 ====
-
-
++
 To meet node naming conventions, Rancher allows setting `useInstanceMetadataHostname` when the `External Amazon` cloud provider is selected. Enabling `useInstanceMetadataHostname` will query ec2 metadata service and set `/hostname` as `hostname-override` for `kubelet` and `kube-proxy`:
-
++
 [,yaml]
 ----
 rancher_kubernetes_engine_config:
@@ -291,20 +289,18 @@ rancher_kubernetes_engine_config:
     name: external-aws
     useInstanceMetadataHostname: true
 ----
-
-You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a link:../custom-clusters/custom-clusters.adoc[custom cluster], add link:../custom-clusters/rancher-agent-options.adoc[`--node-name`] to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using *Show Advanced Options* in the Rancher UI to add *Node Name*.
++
+You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster], add xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[`--node-name`] to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using *Show Advanced Options* in the Rancher UI to add *Node Name*.
 
 . Select the cloud provider.
-
++
 Selecting *External Amazon (out-of-tree)* sets `--cloud-provider=external` and enables `useInstanceMetadataHostname`. As mentioned in step 1, enabling `useInstanceMetadataHostname` will query the EC2 metadata service and set `+http://169.254.169.254/latest/meta-data/hostname+` as `hostname-override` for `kubelet` and `kube-proxy`.
-
++
 [NOTE]
 ====
-
 You must disable `useInstanceMetadataHostname` when setting a custom node name for custom clusters via `node-name`.
 ====
-
-
++
 [,yaml]
 ----
 rancher_kubernetes_engine_config:
@@ -312,16 +308,16 @@ rancher_kubernetes_engine_config:
     name: external-aws
     useInstanceMetadataHostname: true/false
 ----
-
++
 Existing clusters that use an *External* cloud provider will set `--cloud-provider=external` for Kubernetes components but won't set the node name.
 
-. Install the AWS cloud controller manager after the cluster finishes provisioning. Note that the cluster isn't successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done manually, or via <<helm-chart-installation-from-ui,Helm charts in UI>>.
-
+. Install the AWS cloud controller manager after the cluster finishes provisioning. Note that the cluster isn't successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done manually, or via <<_helm_chart_installation_from_ui,Helm charts in UI>>.
++
 Refer to the offical AWS upstream documentation for the https://kubernetes.github.io/cloud-provider-aws[cloud controller manager].
 --
 ======
 
-## Helm Chart Installation from CLI 
+=== Helm Chart Installation from CLI 
 
 [tabs,sync-group-id=k8s-distro]
 ======
@@ -331,7 +327,7 @@ Tab RKE2::
 Official upstream docs for https://github.com/kubernetes/cloud-provider-aws/tree/master/charts/aws-cloud-controller-manager[Helm chart installation] can be found on GitHub.
 
 . Add the Helm repository:
-
++
 [,shell]
 ----
 helm repo add aws-cloud-controller-manager https://kubernetes.github.io/cloud-provider-aws
@@ -339,7 +335,7 @@ helm repo update
 ----
 
 . Create a `values.yaml` file with the following contents to override the default `values.yaml`:
-
++
 [,yaml]
 ----
 # values.yaml
@@ -442,21 +438,21 @@ clusterRoleRules:
 ----
 
 . Install the Helm chart:
-
++
 [,shell]
 ----
 helm upgrade --install aws-cloud-controller-manager aws-cloud-controller-manager/aws-cloud-controller-manager --values values.yaml
 ----
-
++
 Verify that the Helm chart installed successfully:
-
++
 [,shell]
 ----
 helm status -n kube-system aws-cloud-controller-manager
 ----
 
 . (Optional) Verify that the cloud controller manager update succeeded:
-
++
 [,shell]
 ----
 kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager
@@ -469,7 +465,7 @@ Tab RKE::
 Official upstream docs for https://github.com/kubernetes/cloud-provider-aws/tree/master/charts/aws-cloud-controller-manager[Helm chart installation] can be found on GitHub.
 
 . Add the Helm repository:
-
++
 [,shell]
 ----
 helm repo add aws-cloud-controller-manager https://kubernetes.github.io/cloud-provider-aws
@@ -477,7 +473,7 @@ helm repo update
 ----
 
 . Create a `values.yaml` file with the following contents, to override the default `values.yaml`:
-
++
 [,yaml]
 ----
 # values.yaml
@@ -580,28 +576,28 @@ clusterRoleRules:
 ----
 
 . Install the Helm chart:
-
++
 [,shell]
 ----
 helm upgrade --install aws-cloud-controller-manager -n kube-system aws-cloud-controller-manager/aws-cloud-controller-manager --values values.yaml
 ----
-
++
 Verify that the Helm chart installed successfully:
-
++
 [,shell]
 ----
 helm status -n kube-system aws-cloud-controller-manager
 ----
 
 . If present, edit the Daemonset to remove the default node selector `node-role.kubernetes.io/control-plane: ""`:
-
++
 [,shell]
 ----
 kubectl edit daemonset aws-cloud-controller-manager -n kube-system
 ----
 
 . (Optional) Verify that the cloud controller manager update succeeded:
-
++
 [,shell]
 ----
 kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager
@@ -609,7 +605,7 @@ kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager
 --
 ======
 
-## Helm Chart Installation from UI 
+### Helm Chart Installation from UI 
 
 [tabs,sync-group-id=k8s-distro]
 ======
@@ -623,7 +619,7 @@ Tab RKE2::
 . Select *Apps* > *Charts* from the left navigation and install *aws-cloud-controller-manager*.
 . Select the namespace, `kube-system`, and enable *Customize Helm options before install*.
 . Add the following container arguments:
-
++
 [,yaml]
 ----
   - '--use-service-account-credentials=true'
@@ -631,7 +627,7 @@ Tab RKE2::
 ----
 
 . Add `get` to `verbs` for `serviceaccounts` resources in `clusterRoleRules`. This allows the cloud controller manager to get service accounts upon startup.
-
++
 [,yaml]
 ----
   - apiGroups:
@@ -644,7 +640,7 @@ Tab RKE2::
 ----
 
 . Rancher-provisioned RKE2 nodes are tainted `node-role.kubernetes.io/control-plane`. Update tolerations and the nodeSelector:
-
++
 [,yaml]
 ----
 tolerations:
@@ -655,25 +651,23 @@ tolerations:
     value: 'true'
     key: node-role.kubernetes.io/control-plane
 ----
-
++
 [,yaml]
 ----
 nodeSelector:
   node-role.kubernetes.io/control-plane: 'true'
 ----
-
++
 [NOTE]
 ====
-
 There's currently a https://github.com/rancher/dashboard/issues/9249[known issue] where nodeSelector can't be updated from the Rancher UI.  Continue installing the chart and then edit the Daemonset manually to set the `nodeSelector`:
-
++
 [,yaml]
 ----
 nodeSelector:
   node-role.kubernetes.io/control-plane: 'true'
 ----
 ====
-
 
 . Install the chart and confirm that the Daemonset `aws-cloud-controller-manager` is running. Verify `aws-cloud-controller-manager` pods are running in target namespace (`kube-system` unless modified in step 6).
 --
@@ -688,7 +682,7 @@ Tab RKE::
 . Select *Apps* > *Charts* from the left navigation and install *aws-cloud-controller-manager*.
 . Select the namespace, `kube-system`, and enable *Customize Helm options before install*.
 . Add the following container arguments:
-
++
 [,yaml]
 ----
   - '--use-service-account-credentials=true'
@@ -696,7 +690,7 @@ Tab RKE::
 ----
 
 . Add `get` to `verbs` for `serviceaccounts` resources in `clusterRoleRules`. This allows the cloud controller manager to get service accounts upon startup:
-
++
 [,yaml]
 ----
   - apiGroups:
@@ -709,7 +703,7 @@ Tab RKE::
 ----
 
 . Rancher-provisioned RKE nodes are tainted `node-role.kubernetes.io/controlplane`. Update tolerations and the nodeSelector:
-
++
 [,yaml]
 ----
 tolerations:
@@ -720,17 +714,17 @@ tolerations:
     value: 'true'
     key: node-role.kubernetes.io/controlplane
 ----
-
++
 [,yaml]
 ----
 nodeSelector:
   node-role.kubernetes.io/controlplane: 'true'
 ----
-
++
 [NOTE]
 ====
 There's currently a https://github.com/rancher/dashboard/issues/9249[known issue] where `nodeSelector` can't be updated from the Rancher UI.  Continue installing the chart and then Daemonset manually to set the `nodeSelector`:
-
++
 [,yaml]
 ----
 nodeSelector:
@@ -738,9 +732,8 @@ nodeSelector:
 ----
 ====
 
-
 . Install the chart and confirm that the Daemonset `aws-cloud-controller-manager` deploys successfully:
-
++
 [,shell]
 ----
 kubectl rollout status deployment -n kube-system aws-cloud-controller-manager
