--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
@@ -248,4 +248,4 @@ The "rancher-cluster" parts of the two latter file names are dependent on how yo
 
 == Issues or errors?
 
-See the installation-and-upgrade/troubleshooting/troubleshooting[Troubleshooting] page.
+See the xref:installation-and-upgrade/troubleshooting/troubleshooting[Troubleshooting] page.
