--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
@@ -17,7 +17,7 @@ Tab RKE::
 
 [#_rke1_1_创建云凭证]
 [pass]
-<h3><a id="#_rke1_1_创建云凭证"></a>1. 创建云凭证</h3>
+<h3><a id="_rke1_1_创建云凭证"></a>1. 创建云凭证</h3>
 
 . 点击 *☰ > 集群管理*。
 . 单击**云凭证**。
@@ -30,7 +30,7 @@ Tab RKE::
 
 [#_2_使用云凭证创建节点模板]
 [pass]
-<h3><a id="#_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
+<h3><a id="_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
 
 为 DigitalOcean 创建link:../infra-providers.adoc#节点模板[节点模板] 会允许 Rancher 在 DigitalOcean 中配置新节点。其他集群可以复用节点模板。
 
@@ -42,7 +42,7 @@ Tab RKE::
 
 [#_3_使用节点模板创建具有节点池的集群]
 [pass]
-<h3><a id="#_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
+<h3><a id="_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
 
 . 点击 *☰ > 集群管理*。
 . 在**集群**页面上，单击**创建**。
@@ -59,7 +59,7 @@ Tab RKE2::
 --
 [#_rke2_1_创建云凭证]
 [pass]
-<h3><a id="#_rke2_1_创建云凭证"></a>1. 创建云凭证</h3>
+<h3><a id="_rke2_1_创建云凭证"></a>1. 创建云凭证</h3>
 
 如果你已经有一组可用的云凭证，请跳过此部分。
 
@@ -72,7 +72,7 @@ Tab RKE2::
 
 [#_2_创建你的集群]
 [pass]
-<h3><a id="#_2_创建你的集群"></a>2. 创建你的集群</h3>
+<h3><a id="_2_创建你的集群"></a>2. 创建你的集群</h3>
 
 使用 Rancher 在 DigitalOcean 中创建 Kubernetes 集群。
 
