--- a/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
@@ -25,13 +25,10 @@ Harvester Helm Chart 用于管理 Rancher 中 NeuVector UI 的访问，用户可
 * AKS：`containerd` 适用于 v1.19 及更高版本
 * EKS：`docker` 适用于 v1.22 及以下版本；`containerd` 适用于 v1.23 及更高版本
 * GKE：`containerd` (请参阅 https://cloud.google.com/kubernetes-engine/docs/concepts/using-containerd[Google 文档]了解更多信息)
-+
 
 [NOTE]
 ====
-+
 在安装过程中一次只能选择一个容器运行时引擎。
-+
 ====
 
 
@@ -119,19 +116,19 @@ Tab RKE1::
 +
 --
 * 如果 PSP 设置为 true，则所有 NeuVector 组件都是可部署的。
-
++
 你需要为强化集群环境进行额外的配置，如下所示：
 
-. 单击 *☰ > 集群管理*。
-. 选择你创建的集群，并点击 *Explore*。
-. 在左侧导航栏中，点击 *Apps*。
-. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
+.. 单击 *☰ > 集群管理*。
+.. 选择你创建的集群，并点击 *Explore*。
+.. 在左侧导航栏中，点击 *Apps*。
+.. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
 
-* 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*（无需其他配置）：
+... 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*（无需其他配置）：
 +
 image::/img/psp-nv-rke.png[为 RKE1 强化集群启用 PSP]
 
-. 点击右下角的**安装**。
+.. 点击右下角的**安装**。
 --
 
 Tab RKE2::
@@ -142,29 +139,29 @@ Tab RKE2::
 *仅适用于 NeuVector Chart 版本 100.0.0+up2.2.0：*
 
 * 对于 Manager、Scanner 和 Updater 组件，需要进行额外的配置，如下所示：
-
++
 ----
 kubectl patch deploy neuvector-manager-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
 kubectl patch deploy neuvector-scanner-pod -n cattle-neuvector-system --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
 kubectl patch cronjob neuvector-updater-pod -n cattle-neuvector-system --patch '{"spec":{"jobTemplate":{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}}}'
 ----
-
++
 你需要为强化集群环境进行额外的配置。
-
++
 ____
 **注意：**你必须更新 RKE2 和 K3s 强化集群中的配置，如下所示。
 ____
 
-. 单击 *☰ > 集群管理*。
-. 选择你创建的集群，并点击 *Explore*。
-. 在左侧导航栏中，点击 *Apps*。
-. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
+.. 单击 *☰ > 集群管理*。
+.. 选择你创建的集群，并点击 *Explore*。
+.. 在左侧导航栏中，点击 *Apps*。
+.. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
 
-* 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*。请注意，对于 `Manager runAsUser ID`，`Scanner runAsUser ID` 和 `Updater runAsUser ID`，你还必须输入大于 `0` 的值：
+... 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*。请注意，对于 `Manager runAsUser ID`，`Scanner runAsUser ID` 和 `Updater runAsUser ID`，你还必须输入大于 `0` 的值：
 +
 image::/img/psp-nv-rke2.png[为 RKE2 和 K3s 强化集群启用 PSP]
 
-. 点击右下角的**安装**。
+.. 点击右下角的**安装**。
 --
 ======
 
