--- a/versions/latest/modules/zh/pages/security/psact.adoc
+++ b/versions/latest/modules/zh/pages/security/psact.adoc
@@ -25,7 +25,7 @@ Tab RKE2 和 K3s::
 
 [#_rke2k3s_将模板分配给现有集群]
 [pass]
-<h3><a id="#_rke2k3s_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
+<h3><a id="_rke2k3s_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**表中找到要更新的集群，点击 *⋮*。
@@ -35,7 +35,7 @@ Tab RKE2 和 K3s::
 
 [#_加固集群]
 [pass]
-<h3><a id="#_加固集群"></a>加固集群</h3>
+<h3><a id="_加固集群"></a>加固集群</h3>
 
 如果选择 *rancher-restricted* 模板但不选择 *CIS 配置文件*，你将无法满足 CIS Benchmark。有关详细信息，请参阅 link:hardening-guides/rke2/rke2.adoc[RKE2 加固指南]。
 --
@@ -52,7 +52,7 @@ Tab RKE1::
 
 [#_rke1_将模板分配给现有集群]
 [pass]
-<h3><a id="#_rke1_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
+<h3><a id="_rke1_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**表中找到要更新的集群，点击 *⋮*。
