Fixed the non-working links, l3 header in a tab
Signed-off-by: Gunasekhar Matamalam <gunasekhar.matamalam@suse.com>

--- a/versions/v2.8/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
@@ -246,7 +246,9 @@ In addition to recurring snapshots, you may want to take a "one-time" snapshot. 
 2. On the **Clusters** page, navigate to the cluster where you want to take a one-time snapshot. 
 3. Navigate to the `Snapshots` tab and click `Snapshot Now` 
 
-=== How Taking One-Time Snapshots Works 
+[#_how_taking_one_time_snapshots_works]
+[pass]
+<h3><a id="_mounts"></a>How Taking One-Time Snapshots Works</h3>
 
 On one-time snapshot creation, the Rancher delivers a few sets of plans to perform snapshot creation. A set of phases are used, namely: 
 
@@ -269,8 +271,8 @@ If the etcd snapshot creation fails, the phase will be set to `Failed`.
 
 Rancher supports two different backup targets: 
 
-- [Local Target](#local-backup-target) 
-- [S3 Target](#s3-backup-target) 
+- xref:#_local_backup_target[Local Target]
+- xref:#_s3_backup_target[S3 Target]
 
 === Local Backup Target 
 
