--- a/versions/v2.8/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
@@ -248,7 +248,7 @@ In addition to recurring snapshots, you may want to take a "one-time" snapshot. 
 
 [#_how_taking_one_time_snapshots_works]
 [pass]
-<h3><a id="_mounts"></a>How Taking One-Time Snapshots Works</h3>
+<h3><a id="#_how_taking_one_time_snapshots_works"></a>How Taking One-Time Snapshots Works</h3>
 
 On one-time snapshot creation, the Rancher delivers a few sets of plans to perform snapshot creation. A set of phases are used, namely: 
 
